src/Domain/Compiler/Tests/Expression/CharacterLiteral/__Baselines__/CharacterLiteral_EscapeSequnce_UnsupportedCharacter-StashIr.error
error: Unknown escape sequence.
--> main.hs:8:9
  | 
8 | return '\g';    }
  |         ^^
